Fix OSGi tests